se crea front para deleteProducts con restricciones segun perfil, si accedes con perfil admin o premium ahora ves el id y el owner

--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -21,6 +21,13 @@
                         Precio:${{price}} Cantidad:{{stock}}
                     </p>
                 </div>
+                {{#isEqual ../user.role 'premium'}}
+                   ID de producto: {{_id}}
+                {{/isEqual}}
+                {{#isEqual ../user.role 'admin'}}
+                   ID de producto: {{_id}}
+                   Owner: {{owner}}
+                {{/isEqual}}
                 {{#isEqual ../user.role 'user'}}
                     <button class="botonAgregarCarrito btn btn2" data-pid="{{_id}}" data-cid="{{../user.cart}}">
                         Agregar al Carrito
