se modifica logica para que el user premium solo pueda agregar productos al carrito que no le pertenecen y no se activa la tostify

--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -23,6 +23,7 @@
                 </div>
                 {{#isEqual ../user.role 'premium'}}
                    ID de producto: {{_id}}
+                   Owner: {{owner}}
                 {{/isEqual}}
                 {{#isEqual ../user.role 'admin'}}
                    ID de producto: {{_id}}
@@ -33,6 +34,12 @@
                         Agregar al Carrito
                     </button> 
                 {{/isEqual}}
+                {{#isEqual ../user.role 'premium'}}
+                    <button class="botonAgregarCarrito btn btn2" data-pid="{{_id}}" data-cid="{{../user.cart}}">
+                        Agregar al Carrito
+                    </button> 
+                {{/isEqual}}
+                
             </div>
         {{/each}}
         </div>
